--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "homepage": "https://github.com/Amarjeetdev012/google-oauth-login#readme",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.2",
+    "googleapis": "^110.0.0",
     "mongoose": "^5.13.8",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0"
