--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.2",
     "googleapis": "^110.0.0",
+    "mongodb": "^4.13.0",
     "mongoose": "^5.13.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
